<resources>
    <string name="app_name">Metabile</string>
    <string name="jardin">Jardín (Antioquia)</string>
    <string name="informacion_jardin">Información General</string>
    <string name="descripcion_jardin">El municipio de Jardín se encuentra en el Suroeste del Departamento de Antioquia, está ubicado a 134 kilómetros de Medellín (aproximadamente tres horas)., es uno de los pueblos patrimonio más lindos de Colombia, un pueblito paisa muy colorido y acogedor, reconocido por su civismo, casas, balcones, guayacanes, rosales, atardeceres, aves, trucheras, cascadas y por el carácter amable y acogedor de sus habitantes.</string>
    <string name="coordenadas">Coordenadas:</string>
    <string name="coordenadas2">5°35′54″N 75°49′11″O / 5.5983333333333, -75.819722222222</string>
    <string name="temperatura">Temperatura:</string>
    <string name="temperatura2">26°C</string>
    <string name="sitios">Sitios de Interés:</string>
    <string name="sitios2">Basílica de la Inmaculada Concepción, Mirador Cristo Rey, Teleférico la Garrucha, Cueva del Esplendor, Cueva de los Guácharos, Las Trucheras, Otros sitios de comida: Macanas Jardín, Dulces de Jardín.</string>
    <string name="mirador_cristo_rey">MIRADOR CRISTO REY</string>
    <string name="para_llegar_puedes_caminar_desde_el_parque_principal_de_jard_n_durante_una_1_hora_o_puedes_ir_en_tuk_tuk_durante_unos_10_minutos_llegaras_al_mirador_xa_xa_una_vez_arriba_podr_s_apreciar_una_gran_vista_panor_mica_de_jard_n_y_divisar_todas_las_monta_as_que_lo_rodean_arriba_tambi_n_podr_s_encontrar_un_kiosko_en_el_que_puedes_comer_algo_o_tomar_un_delicioso_caf_de_origen_xa_xa_cuando_decidas_bajar_del_mirador_de_cristo_rey_tendr_s_que_hacerlo_por_un_sendero_muy_bonito_que_atraviesa_el_bosque_de_pino_algunos_platanales_cafetales_y_hasta_un_r_o_este_sendero_te_llevar_en_unos_30_minutos_al_centro_del_pueblo">Para llegar puedes caminar desde el parque principal de Jardín durante una 1 hora, o puedes ir en Tuk-Tuk durante unos 10 minutos llegaras al mirador.\n\nUna vez arriba, podrás apreciar una gran vista panorámica de Jardín y divisar todas las montañas que lo rodean. Arriba, también podrás encontrar un kiosko en el que puedes comer algo o tomar un delicioso café de origen.\n\nCuando decidas bajar del Mirador de Cristo Rey, tendrás que hacerlo por un sendero muy bonito que atraviesa el bosque de pino, algunos platanales, cafetales, y hasta un río. Este sendero te llevará en unos 30 minutos al centro del pueblo.</string>
    <string name="todo">TODO</string>
    <string name="telef_rico_la_garrucha">TELEFÉRICO LA GARRUCHA</string>
    <string name="el_telef_rico_la_garrucha_es_un_transporte_aut_ctono_que_utilizaban_los_campesinos_para_moverse_entre_el_pueblo_y_sus_fincas_y_tambi_n_mover_con_mucho_m_s_r_pido_sus_cosechas_xa_xa_el_plan_consiste_en_subir_en_el_telef_rico_hasta_la_cima_del_cerro_disfrutar_de_la_vista_y_luego_bajar_de_nuevo_en_la_garrucha_o_caminar_unos_40_minutos_por_un_sendero_ecol_gico_que_va_a_las_cristalinas_aguas_de_charco_coraz_n">El Teleférico La Garrucha es un transporte autóctono que utilizaban los campesinos para moverse entre el pueblo y sus fincas y también mover con mucho más rápido sus cosechas.\n\nEl plan consiste en subir en el teleférico hasta la cima del cerro, disfrutar de la vista y luego bajar de nuevo en La Garrucha o caminar unos 40 minutos por un sendero ecológico que va a las cristalinas aguas de Charco Corazón.</string>
    <string name="todo">TODO</string>
    <string name="bas_lica_menor_de_la_inmaculada_concepci_n">BASÍLICA MENOR DE LA INMACULADA CONCEPCIÓN</string>
    <string name="est_construida_en_piedra_labrada_a_mano_su_estilo_es_neog_tico_y_ha_sido_decorada_en_su_interior_con_arcos_recubiertos_en_oro_xa_xa_fuera_del_templo_hay_un_hermoso_jard_n_de_rosales_ceibas_y_guayacanes_que_junto_a_las_casas_republicanas_que_la_rodean_hacen_de_jard_n_una_de_los_destinos_m_s_lindos_de_colombia_xa_xa_llegar_a_la_bas_lica_es_bastante_f_cil_pues_est_en_el_parque_principal_solo_debes_caminar_un_par_de_calles_y_levantar_tu_mirada_para_ver_como_sus_torres_te_marcar_n_el_camino_a_ella">Está construida en piedra labrada a mano, su estilo es neogótico y ha sido decorada en su interior con arcos recubiertos en oro.\n\nFuera del templo hay un hermoso jardín de rosales, ceibas y guayacanes, que junto a las casas republicanas que la rodean, hacen de Jardín una de los destinos más lindos de Colombia.\n\nLlegar a la basílica es bastante fácil, pues está en el parque principal, solo debes caminar un par de calles y levantar tu mirada para ver como sus torres te marcarán el camino a ella.</string>
    <string name="todo">TODO</string>
</resources>