<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordenadas_text_view"
    style="@style/Texto_normal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detalle.DetalleActivity">

    <TextView
        android:id="@+id/name_text_view"
        style="@style/Texto_titulo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/jardin"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/picture_image_view"
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:layout_marginTop="16dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_text_view"
        app:srcCompat="@drawable/jardin"
        tools:ignore="ContentDescription" />


    <TextView
        android:id="@+id/label_descripcion_text_view"
        style="@style/Texto_subtitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/informacion_jardin"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/picture_image_view" />

    <TextView
        android:id="@+id/description_text_view"
        style="@style/Texto_normal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/descripcion_jardin"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_descripcion_text_view" />

    <TextView
        android:id="@+id/label_ubicacion_text_view"
        style="@style/Texto_subtitulo2"
        android:layout_width="54dp"
        android:layout_height="18dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/coordenadas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_text_view" />

    <TextView
        android:id="@+id/ubicacion_text_view"
        style="@style/Texto_normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/coordenadas2"
        app:layout_constraintStart_toEndOf="@+id/label_ubicacion_text_view"
        app:layout_constraintTop_toBottomOf="@+id/description_text_view" />

    <TextView
        android:id="@+id/label_temperatura_text_view"
        style="@style/Texto_subtitulo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/temperatura"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_ubicacion_text_view" />

    <TextView
        android:id="@+id/temperatura_text_view"
        style="@style/Texto_normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/temperatura2"
        app:layout_constraintStart_toEndOf="@+id/label_temperatura_text_view"
        app:layout_constraintTop_toBottomOf="@+id/ubicacion_text_view" />

    <TextView
        android:id="@+id/label_otros_legaures_text_view"
        style="@style/Texto_subtitulo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/sitios"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_temperatura_text_view" />

    <TextView
        android:id="@+id/otros_lugares_text_view"
        style="@style/Texto_normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/sitios2"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_otros_legaures_text_view" />

</androidx.constraintlayout.widget.ConstraintLayout>